Fix scrollbar bug.

--- a/src/index.css
+++ b/src/index.css
@@ -18,10 +18,5 @@ body {
 
 .min-dvh-screen {
     min-height: 100vh;
-    min-height: calc(var(--vh, 1vh) * 100);
-}
-
-.dvh-screen {
-    height: 100vh;
-    height: calc(var(--vh, 1vh) * 100);
+    min-height: var(--dvh);
 }
